<resources>
    <string name="app_name">Noi That Gia Dinh</string>
    <string name="welcom">Xin Chào</string>
    <string name="ten">Nội Thất</string>
    <string name="tille">Explore Traveling</string>
    <string name="product">Powered by Trần Quang Trường \nTrần Quốc</string>
    <string name="login">Hi,\nPlease Login</string>
    <string name="luutt">Lưu thông tin đăng nhập</string>
    <string name="nameuse">Name Use</string>
    <string name="Pass">Pass Word</string>
    <string name="singup">SingUp</string>
    <string name="dsytt">Danh Sach Yeu Thich</string>
    <string name="skip">Qua</string>
    <string name="dntrong">Không Để Trống</string>
    <string name="enter">NHập</string>
    <string name="phone">Số Điện Thoại</string>
    <string name="name">Họ Tên</string>
    <string name="fogetpass">Quên Mật Khẩu?</string>
    <string name="create">Tạo\nTài Khoản</string>
    <string name="khuyenmai">Khuyến Mãi</string>
    <string name="thanhtich">Thành Tích Mua Hàng</string>
    <string name="khampha">Xem Nhiều Hơn Ở Đây</string>
    <string name="donhang">Tất Cả Các Sản Phẩm</string>
    <string name="timkiem">Tìm Kiếm...</string>
    <string name="datngay">Đăt Ngay</string>
    <string name="hienthinhanh">Hiển thị Nhanh</string>
    <string name="yeuthich">Yêu Thích</string>
    <string name="giamgia">Phiếu Giảm Giá và Ưu Đãi</string>
    <string name="chaomung">Chào Mừng,</string>
    <string name="thoat">Thoát</string>
    <string name="tkcuatoi">Tài Khoản Của Tôi</string>
    <string name="tttk">Thông Tin Tài Khoản</string>
    <string name="dsyt">Danh Sách Yêu Thích</string>
    <string name="lichsu">Lịch Sử</string>
    <string name="tinnhan">Tin Nhắn</string>
    <string name="caidat">Cài Đặt</string>
    <string name="ngonngu">Ngôn Ngữ</string>
    <string name="thongbao">Thông Báo</string>
    <string name="caidatchung">Cài Đặt Chung</string>
    <string name="thongtincanhan">Thông tin cá nhân</string>
    <string name="gioitinh">Giới Tính</string>
    <string name="ngaysinh">Ngày Sinh</string>
    <string name="sdt">Điện Thoại</string>
    <string name="dangxuat">Đăng Xuất</string>
    <string name="chinhsua">Chỉnh Sửa</string>
    <string name="anhdd">Đổi ảnh đại diện</string>
    <string name="anhbia">Đổi ảnh bìa</string>
    <string name="chupanh">Chup Ảnh</string>
    <string name="admin">Admin</string>
    <string name="dangnhap">Đăng Nhập</string>
    <string name="chinhsuatt">Chỉnh sửa thông tin</string>
    <string name="gtnam">Nam</string>
    <string name="gtnu">Nữ</string>
    <string name="luu">Lưu</string>
    <string name="tuychinh">Tùy Chỉnh</string>
    <string name="them">Thêm</string>
    <string name="sua">Sửa</string>
    <string name="xoa">Xóa</string>
    <string name="huydonhang">Hủy Đơn Hàng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_them_thong_tin">Them_ThongTin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_them_danh_sach_yt">Them_Danh_Sach_YT</string>
    <string name="title_activity_update_sp">UpdateSP</string>
</resources>