<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.activities.Login"
    android:background="@color/cam">
    <ImageView
        android:id="@+id/dk_thoat"
        android:src="@drawable/ic_km_back"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="30dp"
        android:layout_height="30dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-70dp"
        android:src="@drawable/top_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="80dp"
        android:layout_marginStart="-80dp"
        android:textColor="@color/xanh"
        android:fontFamily="@font/muli_black"
        android:textSize="40sp"
        android:text="@string/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="180dp"
        android:layout_width="300dp"
        android:layout_height="520dp"
        android:padding="20dp"
        android:background="@drawable/background_login"
        android:orientation="vertical">
        <TextView
            android:textSize="20dp"
            android:textColor="@color/xanh"
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_fullname"
            android:drawableStart="@drawable/ic_edit"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:textColorHint="@color/chu"
            android:hint="@string/enter"
            android:background="@drawable/background_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <TextView
            android:textSize="20dp"
            android:textColor="@color/xanh"
            android:text="@string/nameuse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_user"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:textColorHint="@color/chu"
            android:hint="@string/enter"
            android:background="@drawable/background_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <TextView
            android:textSize="20dp"
            android:textColor="@color/xanh"
            android:text="Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_email"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:textColorHint="@color/chu"
            android:hint="@string/enter"
            android:background="@drawable/background_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <TextView
            android:textSize="20dp"
            android:textColor="@color/xanh"
            android:text="@string/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_number"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:textColorHint="@color/chu"
            android:hint="@string/enter"
            android:inputType="numberDecimal"
            android:background="@drawable/background_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <TextView
            android:textSize="20dp"
            android:textColor="@color/xanh"
            android:text="@string/Pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_pass"
            android:drawableStart="@drawable/ic_work"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:textColorHint="@color/chu"
            android:hint="@string/enter"
            android:background="@drawable/background_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edt_dangnhap"
            android:text="@string/singup"
            android:textColor="@color/chu"
            android:textSize="26sp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>