<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:layout_margin="16dp"
    android:orientation="vertical"
   >
    <TextView
        android:text="@string/dangnhap"
        android:background="@drawable/background_text"
        android:id="@+id/txt"
        android:textSize="28dp"
        android:textColor="@color/trangxam"
        android:gravity="center_horizontal|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/edt_dn2"
        app:startIconDrawable="@drawable/ic_person"
        android:hint="@string/nameuse"
        app:startIconTint="@color/xanh"
        android:textColorHint="@color/xanh"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginTop="-5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:fontFamily="@font/muli"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/edt_password2"
        app:startIconDrawable="@drawable/ic_work"
        android:hint="@string/Pass"
        app:startIconTint="@color/xanh"
        android:textColorHint="@color/xanh"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconTint="@color/xanh"
        app:endIconMode="password_toggle"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/muli"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
       >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bnt_dn"
            android:background="@drawable/background_button"
            android:text="@string/dangnhap"
            android:textColor="@color/xanh"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bnt_cancel"
            android:background="@drawable/background_button"
            android:text="@string/thoat"
            android:textColor="@color/xanh"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>