<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.activities.SplashActivity"
    android:background="@color/cam"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_1"
        android:orientation="vertical">
        <TextView
            android:fontFamily="@font/baloo"
            android:textColor="@color/xanh"
            android:textSize="65dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/welcom"
            android:layout_marginStart="-10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
            android:layout_gravity="center"
            android:layout_marginTop="-25dp"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="20dp"
            android:layout_width="300dp"
            android:layout_height="300dp">
           <LinearLayout
               android:weightSum="2"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="horizontal">
               <ImageView
                   android:id="@+id/maybay"
                   android:src="@drawable/noithat12"
                   android:scaleType="fitXY"
                   android:layout_width="150dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content"/>
               <ImageView
                   android:id="@+id/background"
                   android:layout_weight="1"
                   android:src="@drawable/noithat13"
                   android:layout_width="150dp"
                   android:layout_height="match_parent"/>
           </LinearLayout>
        </androidx.cardview.widget.CardView>

        <RatingBar
            android:id="@+id/ratingbar"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:numStars="5"
            android:background="@color/xanh"
            android:padding="5dp"
            android:progressTint="#FFEB3B"
            android:rating="5"
            android:stepSize="0.5" />

        <TextView
            android:fontFamily="@font/bangers"
            android:textColor="@color/xanh"
            android:textSize="50dp"
            android:layout_marginTop="-20dp"
            android:layout_gravity="center"
            android:text="@string/ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/bangers"
            android:textColor="@color/xanh"
            android:textSize="50dp"
            android:layout_marginTop="-35dp"
            android:layout_gravity="center"
            android:text="@string/tille"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txt"
            android:textColor="@color/chu"
            android:textSize="20dp"
            android:layout_marginTop="-10dp"
            android:layout_gravity="center"
            android:text="@string/product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>