<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.activities.HienThiAcTy.ChinhSuaActi"
    android:orientation="vertical"
    android:background="@color/trangxam">
    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:background="@color/xanh"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ht_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_back"
            />
        <TextView
            android:textSize="23dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:text="@string/chinhsuatt"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#EAE2E2"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_marginTop="40dp"
            android:id="@+id/chinhsua_img"
            android:src="@drawable/vip"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="20dp"
            android:layout_width="70dp"
            android:layout_height="70dp"/>
        <EditText
            android:id="@+id/edt_ten_cs"
            android:layout_marginStart="20dp"
            android:text="Tran Quang Truong"
            android:drawableEnd="@drawable/ic_edittt"
            app:layout_constraintStart_toEndOf="@id/chinhsua_img"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="220dp"
            android:layout_height="55dp"/>
        <EditText
            android:id="@+id/edt_ngaysinh_cs"
            android:layout_marginStart="20dp"
            android:text="01/01/2002"
            android:drawableEnd="@drawable/ic_edittt"
            app:layout_constraintStart_toEndOf="@id/chinhsua_img"
            app:layout_constraintTop_toBottomOf="@+id/edt_ten_cs"
            android:layout_width="220dp"
            android:layout_height="55dp"/>
        <EditText
            android:id="@+id/edt_dienthoai_cs"
            android:layout_marginStart="20dp"
            android:text="0987654321"
            android:drawableEnd="@drawable/ic_edittt"
            app:layout_constraintStart_toEndOf="@id/chinhsua_img"
            app:layout_constraintTop_toBottomOf="@+id/edt_ngaysinh_cs"
            android:layout_width="220dp"
            android:layout_height="55dp"/>
        <EditText
            android:id="@+id/edt_email_cs"
            android:layout_marginStart="20dp"
            android:text="truong@gmail.com"
            android:drawableEnd="@drawable/ic_edittt"
            app:layout_constraintStart_toEndOf="@id/chinhsua_img"
            app:layout_constraintTop_toBottomOf="@+id/edt_dienthoai_cs"
            android:layout_width="220dp"
            android:layout_height="55dp"/>
        <RadioGroup
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/chinhsua_img"
            app:layout_constraintTop_toBottomOf="@+id/edt_email_cs"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_nam"
                android:text="@string/gtnam"
                android:checked="true"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/radio_nu"
                android:text="@string/gtnu"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bntchinhsua"
        style="@style/Theme.AppCompat"
        android:textSize="22dp"
        android:textColor="@color/white"
        android:text="@string/luu"
        android:background="@drawable/background_bntcomau"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="55dp"/>
</LinearLayout>