<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.activities.Login"
    android:background="@color/cam">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-80dp"
        android:src="@drawable/top_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layout"
        android:layout_marginStart="-50dp"
        android:textColor="@color/xanh"
        android:fontFamily="@font/muli_black"
        android:textSize="40sp"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="150dp"
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:padding="20dp"
        android:background="@drawable/background_login"
        android:orientation="vertical">
        <TextView
            android:text="Name Use"
            android:fontFamily="@font/muli"
            android:textColor="@color/xanh"
            android:textSize="21sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_dn"
            app:startIconDrawable="@drawable/ic_person"
            android:hint="@string/nameuse"
            app:startIconTint="@color/xanh"
            android:textColorHint="@color/xanh"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_marginTop="-5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:fontFamily="@font/muli"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:text="Pass Word"
            android:fontFamily="@font/muli"
            android:textColor="@color/xanh"
            android:textSize="21sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_password"
            android:layout_marginTop="-5dp"
            app:startIconDrawable="@drawable/ic_work"
            android:hint="@string/Pass"
            app:startIconTint="@color/xanh"
            android:textColorHint="@color/xanh"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconTint="@color/xanh"
            app:endIconMode="password_toggle"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/muli"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
      <CheckBox
          android:id="@+id/checkbox"
          android:text="@string/luutt"
          android:textColor="@color/xanh"
          android:padding="8dp"
          android:buttonTint="@color/xanh"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="3">
            <ImageView
                android:id="@+id/bnt_fa"
                android:src="@drawable/facebook"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/bnt_go"
                android:layout_gravity="center"
                android:src="@drawable/google"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/bnt_ti"
                android:layout_gravity="center"
                android:src="@drawable/twitter"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bnt_skip"
            android:layout_marginTop="5dp"
            android:textColor="#fff"
            android:drawableEnd="@drawable/ic_baseline_trending_flat_24"
            android:drawableTint="@color/white"
            android:text="@string/skip"
            android:padding="8dp"
            android:backgroundTint="@color/xanh"
            android:layout_gravity="center"
            android:layout_width="120dp"
            android:layout_height="50dp"/>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bnt_login"
                android:text="Login"
                android:textColor="@color/xanh"
                android:layout_marginEnd="5dp"
                android:background="@drawable/background_button"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bnt_sinup"
                android:text="Singup"
                android:textColor="@color/xanh"
                android:layout_marginStart="5dp"
                android:background="@drawable/background_button"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <TextView
            android:id="@+id/txt_forget"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:text="@string/fogetpass"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>